Agregando algunas mejoras.

--- a/src/view/web/templates/calculadora.html
+++ b/src/view/web/templates/calculadora.html
@@ -11,9 +11,8 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <h1 class="text-2xl font-bold">Calculadora de Ahorro Programado</h1>
             <ul class="flex space-x-4">
-                <li><a href="#home" class="hover:text-yellow-200">Inicio</a></li>
-                <li><a href="#about" class="hover:text-yellow-200">Acerca de</a></li>
-                <li><a href="#contact" class="hover:text-yellow-200">Contacto</a></li>
+                <li><a href="/" class="hover:text-yellow-200">Inicio</a></li>
+                <li><a href="/calculadora" class="hover:text-yellow-200">Calcular</a></li>
             </ul>
         </div>
     </nav>
